# land2port

./: .gitignore  AGENTS.md  BENCHMARKING.md  Cargo.toml  README.md  benchmark_memory.sh  benchmark_performance.sh  build.rs  create_test_video.sh  memory_test.sh  quick_benchmark.sh
.cursor/rules/: audio-transcription.mdc  cli-config.mdc  progress-tracking.mdc  project-structure.mdc  rust-patterns.mdc  video-processing.mdc
benches/: video_processing_benchmark.rs
model/: yolov10l-face.onnx  yolov10m-face.onnx  yolov10n-face.onnx  yolov10s-face.onnx  yolov11l-face.onnx  yolov11m-face.onnx  yolov11n-face.onnx  yolov11s-face.onnx  yolov6m-face.onnx  yolov6n-face.onnx  yolov8l-face.onnx  yolov8m-face.onnx  yolov8m-football.onnx  yolov8n-face.onnx  yolov8n-football.onnx
src/: audio.rs  ball_video_processor.rs  benchmark_tests.rs  cli.rs  config.rs  crop.rs  history.rs  history_smoothing_video_processor.rs  image.rs  main.rs  progress.rs  simple_smoothing_video_processor.rs  transcript.rs  video_processor.rs  video_processor_utils.rs
video/: README.md
